--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -1,1 +1,162 @@
- 
+<form class="mt-2">
+    <div class="card">
+        <div class="card-header">
+            2. Hijos y otros descendientes menores de 25 años, o mayores de dicha edad si son discapacitados, que
+            conviven con el perceptor
+        </div>
+        <div class="card-body text-center">
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-auto col-form-label text-left">Datos de los hijos o descendientes
+                    menores de 25 años
+                    (o mayores de dicha edad si son discapacitados) que conviven con Vd. y que no tienen rentas anuales
+                    superiores a 8.000 euros.
+                </label>
+            </div>
+            <div class="form-group row">
+                <div class="col-sm-2 offset-sm-3 text-muted text-center">Hijo 1</div>
+                <div class="col-sm-2 text-muted text-center">Hijo 2</div>
+                <div class="col-sm-2 text-muted text-center">Hijo 3</div>
+                <div class="col-sm-2 text-muted text-center">Hijo 4</div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Año de nacimiento</label>
+                <div class="col-sm-2">
+                    <input type="number" class="form-control" id="inputEmail3">
+                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                </div>
+                <div class="col-sm-2">
+                    <input type="email" class="form-control" id="inputEmail3">
+                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                </div>
+                <div class="col-sm-2">
+                    <input type="email" class="form-control" id="inputEmail3">
+                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                </div>
+                <div class="col-sm-2">
+                    <input type="email" class="form-control" id="inputEmail3">
+                    <small id="emailHelp" class="form-text text-muted text-center">AAAA</small>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Año de adopción o acogimiento
+                    (1)</label>
+                <div class="col-sm-2">
+                    <input type="number" class="form-control" id="inputEmail3">
+                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                </div>
+                <div class="col-sm-2">
+                    <input type="email" class="form-control" id="inputEmail3">
+                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                </div>
+                <div class="col-sm-2">
+                    <input type="email" class="form-control" id="inputEmail3">
+                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                </div>
+                <div class="col-sm-2">
+                    <input type="email" class="form-control" id="inputEmail3">
+                    <small id="emailHelp" class="form-text text-muted text-center">AAAA</small>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Discapacidad<small id="emailHelp"
+                        class="form-text text-muted">(grado de minusvalía reconocido)</small></label>
+
+                <div class="col-sm-2">
+                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                        <option selected>Choose...</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+                <div class="col-sm-2">
+                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                        <option selected>Choose...</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+                <div class="col-sm-2">
+                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                        <option selected>Choose...</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+                <div class="col-sm-2">
+                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                        <option selected>Choose...</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Además, tiene acreditada la
+                    necesidad de ayuda de terceras personas o movilidad reducida</label>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Si alguno de los ascendientes
+                    convive también, al menos durante la mitad del año, con otros descendientes del mismo grado que Vd.,
+                    indique
+                    en esta casilla el número total de descendientes con los que convive, incluido Vd. (Si los
+                    ascendientes sólo
+                    conviven</label>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-sm-2 offset-sm-3 text-center">
+                    <button class="btn btn-outline-secondary" type="button">Limpiar datos</button>
+                </div>
+                <div class="col-sm-2 text-center">
+                    <button class="btn btn-outline-secondary" type="button">Limpiar datos</button>
+                </div>
+                <div class="col-sm-2 text-center">
+                    <button class="btn btn-outline-secondary" type="button">Limpiar datos</button>
+                </div>
+                <div class="col-sm-2 text-center">
+                    <button class="btn btn-outline-secondary" type="button">Limpiar datos</button>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-auto col-form-label text-left">(1) Solamente en el caso de hijos
+                    adoptados o de
+                    menores acogidos. Tratándose de hijos adoptados que previamente hubieran estado acogidos, indique
+                    únicamente
+                    el año del acogimiento.
+                </label>
+            </div>
+
+        </div>
+    </div>
+</form>
