--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -1,4 +1,5 @@
 <form class="mt-2">
+    <!--Parte 2-->
     <div class="card">
         <div class="card-header">
             2. Hijos y otros descendientes menores de 25 años, o mayores de dicha edad si son discapacitados, que
@@ -114,12 +115,7 @@
             </div>
 
             <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Si alguno de los ascendientes
-                    convive también, al menos durante la mitad del año, con otros descendientes del mismo grado que Vd.,
-                    indique
-                    en esta casilla el número total de descendientes con los que convive, incluido Vd. (Si los
-                    ascendientes sólo
-                    conviven</label>
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">En caso de hijos que convivan únicamente con Vd., sin convivir también con el otro progenitor (padre o madre), o de nietos que convivan únicamente con Vd., sin convivir también con ningún otro de sus abuelos, indíquelo marcando con una "X" esta casilla.</label>
                 <div class="col-sm-2 text-center">
                     <input type="checkbox" class="form-check-input" id="inputEmail3">
                 </div>
@@ -157,6 +153,98 @@
                 </label>
             </div>
 
+        </div>
+    </div>
+
+    <!--Parte 3-->
+    <div class="card mt-3">
+        <div class="card-header">
+            3. Ascendientes mayores de 65 años, o menores de dicha edad si son discapacitados, que conviven con el
+            perceptor
+        </div>
+        <div class="card-body text-center">
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-auto col-form-label text-left">Datos de los ascendientes mayores de
+                    65 años (o menores de dicha edad si son discapacitados) que conviven con Vd. durante, al menos, la
+                    mitad del año y que no tienen
+                </label>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Ascendientes con discapacidad</label>
+                <label for="inputEmail3" class="col-sm-8 col-form-label text-left">Si alguno de los ascendientes tiene reconocido un grado de minusvalía igual o superior al 33 por 100, marque con una "X" la/s casilla/s que corresponda/n a su situación.
+                </label>
+            </div>
+            <div class="form-group row">
+                <div class="col-sm-2 offset-sm-3 text-muted text-center">Ascendiente 1</div>
+                <div class="col-sm-2 text-muted text-center">Ascendiente 2</div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Año de nacimiento</label>
+                <div class="col-sm-2">
+                    <input type="number" class="form-control" id="inputEmail3">
+                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                </div>
+                <div class="col-sm-2">
+                    <input type="email" class="form-control" id="inputEmail3">
+                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Discapacidad<small id="emailHelp"
+                        class="form-text text-muted">(grado de minusvalía reconocido)</small></label>
+
+                <div class="col-sm-2">
+                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                        <option selected>Choose...</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+                <div class="col-sm-2">
+                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                        <option selected>Choose...</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Además, tiene acreditada la
+                    necesidad de ayuda de terceras personas o movilidad reducida</label>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Si alguno de los ascendientes
+                    convive también, al menos durante la mitad del año, con otros descendientes del mismo grado que Vd.,
+                    indique
+                    en esta casilla el número total de descendientes con los que convive, incluido Vd. (Si los
+                    ascendientes sólo
+                    conviven</label>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+                <div class="col-sm-2 text-center">
+                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-sm-2 offset-sm-3 text-center">
+                    <button class="btn btn-outline-secondary" type="button">Limpiar datos</button>
+                </div>
+                <div class="col-sm-2 text-center">
+                    <button class="btn btn-outline-secondary" type="button">Limpiar datos</button>
+                </div>
+            </div>
         </div>
     </div>
 </form>
