--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -1,4 +1,73 @@
 <form class="mt-2">
+    <div class="card mt-3">
+        <div class="card-header">
+            1. Datos del perceptor que efectúa la comunicación
+        </div>
+        <div class="card-body text-center">
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">NIF/NIE</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" id="inputEmail3">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Apellido y Nombre</label>
+                <div class="col-sm-5">
+                    <input type="text" class="form-control" id="inputEmail3">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Código postal residencia</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" id="inputEmail3">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Municipio</label>
+                <div class="col-sm-5">
+                    <input type="text" class="form-control" id="inputEmail3">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Año de nacimiento</label>
+                <div class="col-sm-2">
+                    <input type="number" class="form-control" id="inputEmail3">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Situación familiar</label>
+                <div class="col-sm-5">
+                    <input type="number" class="form-control" id="inputEmail3">
+                </div>
+            </div>
+            <fieldset class="form-group">
+                <div class="row">
+                  <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
+                  <div class="col-sm-10">
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                      <label class="form-check-label" for="gridRadios1">
+                        First radio
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                      <label class="form-check-label" for="gridRadios2">
+                        Second radio
+                      </label>
+                    </div>
+                    <div class="form-check disabled">
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
+                      <label class="form-check-label" for="gridRadios3">
+                        Third disabled radio
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </fieldset>
+        </div>
+    </div>
+
     <!--Parte 2-->
     <div class="card">
         <div class="card-header">
