--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -1,4 +1,5 @@
 <form class="mt-2">
+    <!-- PARTE 1 -->
     <div class="card mt-3">
         <div class="card-header">
             1. Datos del perceptor que efectúa la comunicación
