--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -163,7 +163,7 @@
         </div>
         <div class="card-body text-center">
             <div class="form-group row">
-                <label for="inputEmail3" class="col-auto col-form-label text-left">Datos de los hijos o descendientes
+                <label for="" class="col-auto col-form-label text-left">Datos de los hijos o descendientes
                     menores de 25 años
                     (o mayores de dicha edad si son discapacitados) que conviven con Vd. y que no tienen rentas anuales
                     superiores a 8.000 euros.
@@ -176,79 +176,91 @@
                 <div class="col-sm-2 text-muted text-center">Hijo 4</div>
             </div>
             <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Año de nacimiento</label>
+                <label for="" class="col-sm-3 col-form-label text-right">Año de nacimiento</label>
                 <div class="col-sm-2">
-                    <input type="number" class="form-control" id="inputEmail3">
-                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                    <input formControlName="desc1AnoNacimiento" name="desc1AnoNacimiento" type="number"
+                        class="form-control" id="desc1AnoNacimiento">
+                    <small class="form-text text-muted">AAAA</small>
                 </div>
                 <div class="col-sm-2">
-                    <input type="email" class="form-control" id="inputEmail3">
-                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                    <input formControlName="desc2AnoNacimiento" name="desc2AnoNacimiento" type="number"
+                        class="form-control" id="desc2AnoNacimiento">
+                    <small class="form-text text-muted">AAAA</small>
                 </div>
                 <div class="col-sm-2">
-                    <input type="email" class="form-control" id="inputEmail3">
-                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                    <input formControlName="desc3AnoNacimiento" name="desc3AnoNacimiento" type="number"
+                        class="form-control" id="desc3AnoNacimiento">
+                    <small class="form-text text-muted">AAAA</small>
                 </div>
                 <div class="col-sm-2">
-                    <input type="email" class="form-control" id="inputEmail3">
-                    <small id="emailHelp" class="form-text text-muted text-center">AAAA</small>
+                    <input formControlName="desc4AnoNacimiento" name="desc4AnoNacimiento" type="number"
+                        class="form-control" id="desc4AnoNacimiento">
+                    <small class="form-text text-muted">AAAA</small>
                 </div>
             </div>
             <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Año de adopción o acogimiento
+                <label for="" class="col-sm-3 col-form-label text-right">Año de adopción o acogimiento
                     (1)</label>
                 <div class="col-sm-2">
-                    <input type="number" class="form-control" id="inputEmail3">
-                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                    <input formControlName="desc1AnoAdopcion" name="desc1AnoAdopcion" type="number" class="form-control"
+                        id="desc1AnoAdopcion">
+                    <small class="form-text text-muted">AAAA</small>
                 </div>
                 <div class="col-sm-2">
-                    <input type="email" class="form-control" id="inputEmail3">
-                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                    <input formControlName="desc2AnoAdopcion" name="desc2AnoAdopcion" type="number" class="form-control"
+                        id="desc2AnoAdopcion">
+                    <small class="form-text text-muted">AAAA</small>
                 </div>
                 <div class="col-sm-2">
-                    <input type="email" class="form-control" id="inputEmail3">
-                    <small id="emailHelp" class="form-text text-muted">AAAA</small>
+                    <input formControlName="desc3AnoAdopcion" name="desc3AnoAdopcion" type="number" class="form-control"
+                        id="desc3AnoAdopcion">
+                    <small class="form-text text-muted">AAAA</small>
                 </div>
                 <div class="col-sm-2">
-                    <input type="email" class="form-control" id="inputEmail3">
-                    <small id="emailHelp" class="form-text text-muted text-center">AAAA</small>
+                    <input formControlName="desc4AnoAdopcion" name="desc4AnoAdopcion" type="number" class="form-control"
+                        id="desc4AnoAdopcion">
+                    <small class="form-text text-muted">AAAA</small>
                 </div>
             </div>
 
             <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Discapacidad<small id="emailHelp"
-                        class="form-text text-muted">(grado de minusvalía reconocido)</small></label>
+                <label class="col-sm-3 col-form-label text-right">Discapacidad<small class="form-text text-muted">(grado
+                        de minusvalía reconocido)</small></label>
 
                 <div class="col-sm-2">
-                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-                        <option selected>Choose...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                    <select formControlName="desc1GDiscapacidad" name="desc1GDiscapacidad"
+                        class="form-control custom-select my-1 mr-sm-2" id="desc1GDiscapacidad">
+                        <option value="-1">Seleccione</option>
+                        <option value="0">Ninguna</option>
+                        <option value="1">Igual o superior al 33% e inferior al 65%</option>
+                        <option value="2">Igual o superior al 65%</option>
                     </select>
                 </div>
                 <div class="col-sm-2">
-                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-                        <option selected>Choose...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                    <select formControlName="desc2GDiscapacidad" name="desc2GDiscapacidad"
+                        class="form-control custom-select my-1 mr-sm-2" id="desc2GDiscapacidad">
+                        <option value="-1">Seleccione</option>
+                        <option value="0">Ninguna</option>
+                        <option value="1">Igual o superior al 33% e inferior al 65%</option>
+                        <option value="2">Igual o superior al 65%</option>
                     </select>
                 </div>
                 <div class="col-sm-2">
-                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-                        <option selected>Choose...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                    <select formControlName="desc3GDiscapacidad" name="desc3GDiscapacidad"
+                        class="form-control custom-select my-1 mr-sm-2" id="desc3GDiscapacidad">
+                        <option value="-1">Seleccione</option>
+                        <option value="0">Ninguna</option>
+                        <option value="1">Igual o superior al 33% e inferior al 65%</option>
+                        <option value="2">Igual o superior al 65%</option>
                     </select>
                 </div>
                 <div class="col-sm-2">
-                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-                        <option selected>Choose...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                    <select formControlName="desc4GDiscapacidad" name="desc4GDiscapacidad"
+                        class="form-control custom-select my-1 mr-sm-2" id="desc4GDiscapacidad">
+                        <option value="-1">Seleccione</option>
+                        <option value="0">Ninguna</option>
+                        <option value="1">Igual o superior al 33% e inferior al 65%</option>
+                        <option value="2">Igual o superior al 65%</option>
                     </select>
                 </div>
             </div>
@@ -257,16 +269,20 @@
                 <label for="inputEmail3" class="col-sm-3 col-form-label text-right">Además, tiene acreditada la
                     necesidad de ayuda de terceras personas o movilidad reducida</label>
                 <div class="col-sm-2 text-center">
-                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                    <input formControlName="desc1GDiscapacidad3" name="desc1GDiscapacidad3" value="1" type="checkbox"
+                        class="form-check-input" id="desc1GDiscapacidad3">
                 </div>
                 <div class="col-sm-2 text-center">
-                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                    <input formControlName="desc2GDiscapacidad3" name="desc2GDiscapacidad3" value="1" type="checkbox"
+                        class="form-check-input" id="desc2GDiscapacidad3">
                 </div>
                 <div class="col-sm-2 text-center">
-                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                    <input formControlName="desc3GDiscapacidad3" name="desc3GDiscapacidad3" value="1" type="checkbox"
+                        class="form-check-input" id="desc3GDiscapacidad3">
                 </div>
                 <div class="col-sm-2 text-center">
-                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                    <input formControlName="desc4GDiscapacidad3" name="desc4GDiscapacidad3" value="1" type="checkbox"
+                        class="form-check-input" id="desc4GDiscapacidad3">
                 </div>
             </div>
 
@@ -276,16 +292,20 @@
                     convivan únicamente con Vd., sin convivir también con ningún otro de sus abuelos, indíquelo marcando
                     con una "X" esta casilla.</label>
                 <div class="col-sm-2 text-center">
-                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                    <input formControlName="desc1Computo" name="desc1Computo" value="1" type="checkbox"
+                        class="form-check-input" id="desc1Computo">
                 </div>
                 <div class="col-sm-2 text-center">
-                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                    <input formControlName="desc2Computo" name="desc2Computo" value="1" type="checkbox"
+                        class="form-check-input" id="desc2Computo">
                 </div>
                 <div class="col-sm-2 text-center">
-                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                    <input formControlName="desc3Computo" name="desc3Computo" value="1" type="checkbox"
+                        class="form-check-input" id="desc3Computo">
                 </div>
                 <div class="col-sm-2 text-center">
-                    <input type="checkbox" class="form-check-input" id="inputEmail3">
+                    <input formControlName="desc4Computo" name="desc4Computo" value="1" type="checkbox"
+                        class="form-check-input" id="desc4Computo">
                 </div>
             </div>
 
@@ -304,7 +324,7 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="inputEmail3" class="col-auto col-form-label text-left">(1) Solamente en el caso de hijos
+                <label class="col-auto col-form-label text-left">(1) Solamente en el caso de hijos
                     adoptados o de
                     menores acogidos. Tratándose de hijos adoptados que previamente hubieran estado acogidos, indique
                     únicamente
@@ -359,7 +379,7 @@
 
                 <div class="col-sm-2">
                     <select formControlName="asc1GDiscapacidad" name="asc1GDiscapacidad"
-                        class="form-control custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                        class="form-control custom-select my-1 mr-sm-2">
                         <option value="-1">Seleccione</option>
                         <option value="0">Ninguna</option>
                         <option value="1">Igual o superior al 33% e inferior al 65%</option>
@@ -368,7 +388,7 @@
                 </div>
                 <div class="col-sm-2">
                     <select formControlName="asc2GDiscapacidad" name="asc2GDiscapacidad"
-                        class="form-control custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                        class="form-control custom-select my-1 mr-sm-2">
                         <option value="-1">Seleccione</option>
                         <option value="0">Ninguna</option>
                         <option value="1">Igual o superior al 33% e inferior al 65%</option>
@@ -417,4 +437,90 @@
             </div>
         </div>
     </div>
+
+    <!-- PARTE 4 -->
+    <div class="card mt-3">
+        <div class="card-header">
+            4. Pensiones compensatorias en favor del cónyuge y anualidades por alimentos en favor de los hijos, fijadas
+            ambas por decisión judicial
+        </div>
+        <div class="card-body">
+            <div class="form-group row">
+                <label for="favorConyuge" class="col-sm-5 col-form-label text-right">Pensión compensatoria en favor del
+                    cónyuge<small class="form-text text-muted">Importe anual que
+                        está Vd. obligado a satisfacer por resolución judicial</small></label>
+                <div class="col-sm-2 ">
+                    <input id="favorConyuge" class="form-control" type="number" formControlName="favorConyuge"
+                        name="favorConyuge"><label>€</label>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="favorHijos" class="col-sm-5 col-form-label text-right">Anualidades por alimentos en favor de
+                    los hijos
+                    <small class="form-text text-muted">Importe
+                        anual que está Vd. obligado a satisfacer por resolución judicial</small></label>
+                <div class="col-sm-2 ">
+                    <input id="favorHijos" class="form-control" type="number" formControlName="favorHijos"
+                        name="favorHijos"><label>€</label>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- PARTE 5 -->
+    <div class="card mt-3">
+        <div class="card-header">
+            5. Pagos por la adquisición o rehabilitación de la vivienda habitual utilizando financiación ajena, con
+            derecho a deducción en el IRPF
+        </div>
+        <div class="card-body">
+            <div class="form-group row">
+                <label for="favorConyuge" class="col-sm-2 col-form-label text-right">Importante</label>
+                <div class="col ">
+                    sólo podrán cumplimentar este apartado los contribuyentes que hayan adquirido su vivienda habitual,
+                    o hayan satisfecho cantidades por obras de rehabilitación de la misma, antes del 1 de enero de 2013.
+                </div>
+            </div>
+            <div class="form-group row form-inline">
+                <div class="col">
+                    <input class="form-control" type="checkbox" formControlName="pagosVivienda" name="pagosVivienda"
+                        value="1"> Marque esta casilla si está Vd. efectuando pagos por préstamos destinados a la
+                    adquisición o rehabilitación de su vivienda habitual por los que vaya a tener derecho a deducción
+                    por inversión en vivienda habitual en el IRPF y la cuantía total de sus retribuciones íntegras en
+                    concepto de rendimientos del trabajo procedentes de todos sus pagadores es inferior a 33.007,20
+                    euros anuales
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- PARTE 6 -->
+    <div class="card mt-3">
+        <div class="card-header">
+            6. Fecha y firma de la comunicación
+        </div>
+        <div class="card-body">
+            <div class="form-group row form-inline">
+                <div class="col"> Manifiesto ser contribuyente del IRPF y declaro que son ciertos los datos arriba
+                    indicados, presentando ante la empresa o entidad pagadora la presente comunicación de mi situación
+                    personal y familiar, o de su variación, a los efectos previstos en el artículo 88 del Reglamento del
+                    IRPF
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="" class="col-sm-2 col-form-label text-right">Localidad</label>
+
+                <div class="col input-group  ">
+                    <input id="" class="form-control" type="text">
+                    <input id="" class="form-control" type="text">
+                    <input id="" class="form-control" type="text">
+                    <input id="" class="form-control" type="text">
+                </div>
+            </div>
+        </div>
+    </div>
+
 </form>
